--- a/home.html
+++ b/home.html
@@ -12,5 +12,9 @@
             <li>Item 4</li>
             <li>Item 5</li>
         </ul>
+        <ul>
+            <ol>Khawar</ol>
+            <ol>Muhammads</ol>
+        </ul>
     </body>
 </html>
