--- a/home.html
+++ b/home.html
@@ -11,6 +11,11 @@
             <li>Item 3</li>
             <li>Item 4</li>
             <li>Item 5</li>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+            <li>Item 4</li>
+            <li>Item 5</li>
         </ul>
         <ul>
             <ol>Khawar</ol>
