--- a/personal-home-page.html
+++ b/personal-home-page.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Yusra Mariam</title>
-    <link rel="stylesheet" href="css/6.css">
+    <link rel="stylesheet" href="css/css-styles.css">
 </head>
 
 <body>
