--- a/personal-home-page.html
+++ b/personal-home-page.html
@@ -145,11 +145,11 @@
         <div class="inner clearfix">
             <div class="col">
                 <p>Before</p>
-                <img src="images/before.png" alt="Before">
+                <img src="images/before.jpeg" alt="Before">
             </div>
             <div class="col">
                 <p>After</p>
-                <img src="images/after.jpg" alt="After">
+                <img src="images/after.jpeg" alt="After">
             </div>
         </div>
     </div>
