--- a/personal-home-page.html
+++ b/personal-home-page.html
@@ -22,7 +22,7 @@
     <div id="about">
         <div class="inner clearfix">
             <div id="image">
-                <img src="images/my-image.jpg" alt="Yusra Mariam">
+                <img src="images/my-image.jpeg" alt="Yusra Mariam">
                 <p>Web Developer</p>
             </div>
             <div id="bio">
